initialize index.html

--- a/Image/about.html
+++ b/Image/about.html
@@ -11,25 +11,22 @@
     <h1>About Me</h1>
     <p>Learn more about who I am and what I do.</p>
   </header>
-
-  <section class="about-section">
-    <div class="about-image">
-      <img src="pexels-francesco-ungaro-2325447.jpg" alt="Dey well">
-    </div>
-  </section>
   
   <main class="about-container">
     <section class="about-section">
       <div class="about-image">
-        <img src="https://via.placeholder.com/300" alt="About Me">
+        <img src="Snapchat-2086993262.jpg" alt="About Me">
       </div>
       <div class="about-text">
         <h2>Hello, I'm Yusuf Umarfaruk Adebayo</h2>
         <p>
-          I’m a passionate [Your Profession or Role], with a focus on creating innovative and user-centric solutions. With years of experience in [Your Field], I have developed a diverse skill set that allows me to tackle complex challenges and deliver exceptional results.
+        Hello, i'm Yusuf Umarfaruk Adebayo, a passoinate developer and problem solver with a strong commitment to creating innovatives and efficient solutions. my journey is rooted in a love for technology and continous learning, and over the years, i've developed expertise in web development, programming, and building user-friendly applications.
         </p>
         <p>
-          My mission is to empower individuals and businesses through [Your Mission or Purpose]. When I’m not working, I enjoy [Your Hobbies or Interests].
+          I take pride in delivering high-quality work, always stiving for excellence and innovation in everything i do. When I'm not working on exciting projects, i enjoy reading,ecploring new technologies, and mentoring others to achieve their goals.
+        </p>
+        <p>
+          Thank you for visiting my website! I'm excited to connect, collaborate, and make a meaningful impact together."*
         </p>
       </div>
     </section>
