--- a/Image/index.html
+++ b/Image/index.html
@@ -80,10 +80,10 @@ gi<!DOCTYPE html>
         <li><a href="https://facebook.com" target="_blank" aria-label="Facebook">
           <img src="https://cdn-icons-png.flaticon.com/512/145/145802.png" alt="Facebook"></a>
         </li>
-        <li><a href="https://twitter.com" target="_blank" aria-label="Twitter">
+        <li><a href="https://twitter.com/@Flow11146" target="_blank" aria-label="Twitter">
           <img src="https://cdn-icons-png.flaticon.com/512/145/145812.png" alt="Twitter"></a>
         </li>
-        <li><a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn">
+        <li><a href="https://linkedin.com/Umarfaruk Adebayo Yusuf" target="_blank" aria-label="LinkedIn">
           <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" alt="LinkedIn"></a>
         </li>
         <li><a href="https://instagram.com/flowboy844" target="_blank" aria-label="Instagram">
