--- a/Image/contact.html
+++ b/Image/contact.html
@@ -11,7 +11,7 @@
   <div class="contact-container">
     <h1>Contact Us</h1>
     <p>We’d love to hear from you! Fill out the form below, and we’ll get back to you shortly.</p>
-    <form class="contact-form" action="#" method="POST">
+    <form class="contact-form" action="images.jpeg" method="POST">
       <div class="form-group">
         <label for="name">Full Name <span style="color: red;">*</span></label>
         <input type="text" id="name" name="name" placeholder="Your full name" required>
